# agora

./: .env.example  .gitignore  .secrets.baseline  CLAUDE.md  LICENSE  MORNING_SUMMARY.md  Makefile  NEXT_SESSION.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: README.md  audit_log.py  block_dangerous_git.py  check_adr_refs.py  check_datetime_utc.py  check_doc_freshness.py  db_migration_reminder.py  nudge_stale_check.py  scan_secrets.py
.claude/skills/: README.md
.github/workflows/: audit.yml  postgres-tests.yml  routing-eval-floor.yml  triple-gate.yml
alembic/: env.py
alembic/versions/: 20260502_initial_schema.py  20260503_approving_state_marker.py  20260504_outbox_claimed_at.py  20260509_saga_patron_id_index.py
docs/: SECURITY_MODEL.md  architecture.md  lessons.md  productionization.md  runbook.md  solution.md
docs/adr/: 0001-wrap-folio-reshare.md  0002-event-sourced-saga-ledger.md  0003-google-adk-agent-framework.md  0004-python-fastapi-stack.md  0005-human-approval-default.md  0006-sru-only-skip-z3950-binary.md  0007-fedramp-deferred.md  0008-ulid-idempotency-keys.md  0009-docker-compose-sandbox.md  0010-saga-coordinator-not-engine.md  0011-outbox-commit-then-enqueue.md  0012-approve-forward-outbox-migration.md  0013-okapi-token-auth.md  0014-routing-llm-tiebreaker.md  0015-staff-console-htmx-jinja2.md  0016-compensate-ship-manualclose.md  0017-renew-request-sandbox-gap.md  0018-tenant-scoping-stopgap.md  0019-rbac-staff-console-roles.md  (+1 more)
docs/prd/: 02-agents.md  (+6 more)
prompts/: build-agora.md
scripts/: build_brief.py  build_deck.py  check_template_xss_guards.py  gen_exec_brief.py  normalize_secrets_baseline.py  reshare_probe.py  sync_doc_counts.py  validate_iso18626.py
tests/: conftest.py  test_admin_dsar.py  test_agents.py  test_alembic_postgres.py  test_api.py  test_api_auth.py  test_app_coverage.py  test_authz.py  test_cli.py  test_config.py  test_coordinator.py  test_crossref.py  test_db_orm.py  test_demo_happy_path.py  test_discovery.py  test_doc_counts.py  test_eval_harness.py  test_factories.py  test_idempotency.py  test_iso18626_validation.py  test_ledger.py  test_ncip_client.py  test_ncip_http_client.py  test_ncip_http_smoke.py  test_okapi_auth.py  test_outbox.py  test_outbox_concurrent_postgres.py  test_policy_contu.py  test_portal.py  test_property_saga.py  test_reconciliation_agent.py  test_renewal.py  test_request_fixtures.py  test_reshare_http_client.py  test_reshare_http_smoke.py  test_reshare_recall.py  test_retention.py  test_routing_llm_adk.py  test_routing_tiebreaker.py  test_saga_transitions.py  (+6 more)
(+85 files in other folders)
