[project]
name = "agora"
version = "0.1.0"
description = "Agentic Inter-Library Loan (ILL) system — research prototype wrapping FOLIO/ReShare"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Agora team" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "python-ulid>=2.7",
    "structlog>=24.1",
    "tenacity>=8.2",
    "lxml>=5.1",
]

[project.optional-dependencies]
adk = [
    "google-adk>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.99",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.20",
    "freezegun>=1.5",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]

[project.scripts]
agora = "agora.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agora"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI Depends() idiom in defaults
    "SIM102", # nested if can be intentional for readability
    "UP007",  # X | Y is fine but `Optional[X]` is sometimes clearer
    "UP032",  # f-string vs .format() — leave as-is
    "UP042",  # str+Enum vs StrEnum — keep str+Enum for pydantic compatibility
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["lxml.*"]
ignore_missing_imports = true

[tool.bandit]
# Skip the test directory: pytest fixtures use bare asserts and mock
# credentials by design (and bandit can't tell them from production
# code). Source-tree findings are gated per-line via `# nosec BXXX
# # reason` comments — see saga/coordinator.py and config.py.
exclude_dirs = ["tests", ".venv", ".claude"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: requires running ReShare or external services",
]
